# url-shortener-alpha

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
app/: config.py  main.py
app/routes/: health.py  links.py
app/services/: redis.py
k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  namespace.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml
postman/: snip.postman_collection.json
tests/: conftest.py  fakes.py  test_health.py  test_links.py
